clusters/building-blocks/other/apps/spoolman/app/spoolman-deploy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: spoolman
  name: spoolman
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: spoolman
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spoolman
    spec:
      # securityContext:
      #   runAsNonRoot: true
      #   runAsUser: 1000
      #   runAsGroup: 1000
      #   fsGroup: 1000
      #   fsGroupChangePolicy: OnRootMismatch
      #   seccompProfile:
      #     type: RuntimeDefault
      automountServiceAccountToken: false
      containers:
        - name: main
          image: ghcr.io/donkie/spoolman:0.27.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          ports:
            - containerPort: 8000
              name: main
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 2
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 50Mi
          startupProbe:
            failureThreshold: 60
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 2
          volumeMounts:
            - mountPath: /home/app/.local/share/spoolman # Do NOT modify this line
              name: spoolman-config
              # securityContext:
              #   allowPrivilegeEscalation: false
              #   capabilities:
              #     drop:
              #       - ALL
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
        - name: spoolman-config
          persistentVolumeClaim:
            claimName: spoolman-pvc
