clusters/building-blocks/other/apps/spoolman/app/spoolman-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spoolman
  namespace: default
  labels:
    app.kubernetes.io/name: spoolman
spec:
  selector:
    app.kubernetes.io/name: spoolman
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
