clusters/building-blocks/other/apps/spoolman/app/spoolman-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: spoolman
  namespace: default
  labels:
    app.kubernetes.io/name: spoolman
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`spools.home.${DOMAIN_NAME}`)
      priority: 10
      services:
        - kind: Service
          name: spoolman
          namespace: default
          passHostHeader: true
          port: 80
          scheme: http
